# Gia_pha

./: .gitignore
admin/: package-lock.json  package.json  vite.config.js
admin/src/: App.jsx  main.jsx
admin/src/api/: axios.js
admin/src/components/: AdminRoute.jsx  EditMemberModal.jsx  EditUserModal.jsx  MemberDetailModal.jsx  ProtectedRoute.jsx
admin/src/context/: AuthContext.jsx
admin/src/layouts/: AdminLayout.jsx
admin/src/pages/: Login.jsx  Members.jsx  UserManagement.jsx
backend/: .env  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  members.py  roles.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_member.py  crud_user.py  permissions.py
backend/app/db/: session.py
backend/app/models/: member.py  role.py  user.py
backend/app/schemas/: member.py  role.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 4aeabcd38463_tạo_user_và_member.py  891af0026a94_add_roles_table_and_role_id_to_member.py  c111af1b846b_new_update.py  d1360e859ea7_doi_dang_nhap_sang_sdt.py
